FIX de Endpoints
